Fixed compoments not showing issue

--- a/biocomputingWebsite/simulationApp/static/simulationApp/css/style.css
+++ b/biocomputingWebsite/simulationApp/static/simulationApp/css/style.css
@@ -157,12 +157,12 @@ textarea{
 
 .components {
   float: left;
-  width: 5%;
+  width: 15%;
   height: 100%;
 }
 
 #myContainer {
-  width: 95%; 
+  width: 85%; 
   height: 100%; 
   background-color: white;
 
